@@ -7266,9 +7266,16 @@ void MadEditFrame::OnToolsRunMacroFile( wxCommandEvent& event )
 
     if( !wxDir::Exists(dir) )
     {
-        wxFileName filename( m_RecentFiles->GetHistoryFile( 0 ) );
-        dir = filename.GetPath( wxPATH_GET_VOLUME | wxPATH_GET_SEPARATOR );
-        if( !wxDir::Exists(dir) ) dir = wxGetCwd();
+        if( m_RecentFiles->GetCount() )
+        {
+            wxFileName filename( m_RecentFiles->GetHistoryFile( 0 ) );
+            dir = filename.GetPath( wxPATH_GET_VOLUME | wxPATH_GET_SEPARATOR );
+            if( !wxDir::Exists(dir) ) dir = wxGetCwd();
+        }
+        else
+        {
+            dir = wxGetCwd();
+        }
     }
 
     // Hide Modaless Dialog
@@ -7404,9 +7411,16 @@ void MadEditFrame::OnToolsSaveRecMacro( wxCommandEvent& event )
     
     if( !wxDir::Exists(dir) )
     {
-        wxFileName filename( m_RecentFiles->GetHistoryFile( 0 ) );
-        dir = filename.GetPath( wxPATH_GET_VOLUME | wxPATH_GET_SEPARATOR );
-        if( !wxDir::Exists(dir) ) dir = wxGetCwd();
+        if( m_RecentFiles->GetCount() )
+        {
+            wxFileName filename( m_RecentFiles->GetHistoryFile( 0 ) );
+            dir = filename.GetPath( wxPATH_GET_VOLUME | wxPATH_GET_SEPARATOR );
+            if( !wxDir::Exists(dir) ) dir = wxGetCwd();
+        }
+        else
+        {
+            dir = wxGetCwd();
+        }
     }
 
     wxString fileFilter = wxString( wxT( "Mad Macro(*.mpy)|*.mpy|" ) ) + wxFileSelectorDefaultWildcardStr + wxT( "|All files(*;*.*)" );
@@ -7455,7 +7469,7 @@ void MadEditFrame::OnToolsSaveRecMacro( wxCommandEvent& event )
 
             wxFileName fn( filename );
             wxString saveDir( fn.GetPath() );
-            //if(dir == saveDir)
+            if(dir == saveDir)
             {
                 static wxString hlp_prefix( wxT( "####" ) );
                 wxString help, firstLine;
@@ -7479,9 +7493,16 @@ void MadEditFrame::OnToolsEditMacroFile( wxCommandEvent& event )
 
     if( !wxDir::Exists(dir) )
     {
-        wxFileName filename( m_RecentFiles->GetHistoryFile( 0 ) );
-        dir = filename.GetPath( wxPATH_GET_VOLUME | wxPATH_GET_SEPARATOR );
-        if( !wxDir::Exists(dir) ) dir = wxGetCwd();
+        if( m_RecentFiles->GetCount() )
+        {
+            wxFileName filename( m_RecentFiles->GetHistoryFile( 0 ) );
+            dir = filename.GetPath( wxPATH_GET_VOLUME | wxPATH_GET_SEPARATOR );
+            if( !wxDir::Exists(dir) ) dir = wxGetCwd();
+        }
+        else
+        {
+            dir = wxGetCwd();
+        }
     }
 
     // Hide Modaless Dialog
